@startuml
!theme plain
skinparam backgroundColor #ffffff
skinparam shadowing false
skinparam linetype ortho

class "TransferContext" as TC {
  +bytes4 selector
  +address sender
  +address from
  +address to
  +uint256 value
  +uint256 tokenId
}

class "RuleNFTAdapter" as ADAPTER
class "RuleValidateTransfer" as BASE

TC --> ADAPTER : transferred(TransferContext)
ADAPTER --> BASE : _detectTransferRestriction
ADAPTER --> BASE : _detectTransferRestrictionFrom

note right of ADAPTER
Selector dispatch:
- ERC3643 transferred
- RuleEngine transferred
- ERC7943 overloads
end note

@enduml
